# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/module_args/mojo.gni")
import("//mojo/public/tools/bindings/mojom.gni")

mojom("interfaces") {
  sources = [
    "image_producer.mojom",
  ]

  import_dirs = [ "//mojo/services" ]

  public_deps = [
    "//mojo/services/geometry/interfaces",
    "//mojo/services/gfx/images/interfaces",
  ]
}