# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/mojo_application.gni")

mojo_native_application("image_pipe_spinning_cube") {
  sources = [
    "image_pipe_spinning_cube_app.cc",
  ]

  deps = [
    "//base",
    "//mojo/public/cpp/application:standalone",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/environment",
    "//mojo/public/cpp/system",
    "//mojo/public/cpp/utility",
    "//mojo/services/gfx/display_manager/interfaces",
    "//mojo/services/gfx/images/interfaces",
    "../interfaces",
    "../gles2_spinning_cube",
  ]
}